--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,8 +53,8 @@ bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-bind -n M-h resize-pane -L 5
-bind -n M-l resize-pane -R 5
+bind -n M-h if-shell "$is_vim" "send-keys M-h" "resize-pane -L 5"
+bind -n M-l if-shell "$is_vim" "send-keys M-l" "resize-pane -R 5"
 bind -n M-k if-shell "$is_vim" "send-keys M-k" "resize-pane -U 5"
 bind -n M-j if-shell "$is_vim" "send-keys M-j" "resize-pane -D 5"
 
