--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,7 +97,10 @@ set -g focus-events on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @sidebar-tree '.' # Toggle key binding
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
