vim obsession auto starts tracking all new vim sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,6 +82,7 @@ set -w -g wrap-search off
 
 # Restore neovim sessions
 set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
 
 # Restore tmux session
 set -g @continuum-restore 'on'
