Added status line plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,12 @@ set-option -g default-command $SHELL
 set-window-option -g automatic-rename off
 set-option -g set-titles on
 
+# Window styling
+set-window-option -g window-status-activity-style fg=colour255,bg=colour27
+set-window-option -g window-status-current-format "#[fg=colour27, bg=colour255] #I ⮀ #W #[fg=colour27,bg=colour255,bold]* "
+set-window-option -g window-status-format "#[fg=colour255,bg=colour27] #I ⮁ #W"
+set-window-option -g window-status-last-style fg=colour255,bg=colour27
+
 set -g status-keys vi
 set -g history-limit 10000
 setw -g mode-keys vi
@@ -67,10 +73,6 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Highlight active/inactive
-set -g window-status-current-style bg=colour0,fg=yellow
-
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250,bg=colour0'
 set -g pane-border-style bg=colour235,fg=colour238
 set -g pane-active-border-style bg=colour236,fg=colour51
 
@@ -98,6 +100,15 @@ set -g focus-events on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @plugin 'erikw/tmux-powerline'
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
 
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @sidebar-tree '.' # Toggle key binding
