--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set-option -g set-titles on
 
 # Window styling
 set-window-option -g window-status-activity-style fg=colour255,bg=colour27
-set-window-option -g window-status-current-format "#[fg=colour27, bg=colour255] #I ⮀ #W #[fg=colour27,bg=colour255,bold]* "
+set-window-option -g window-status-current-format "#[fg=colour27, bg=colour255, bold] #I ⮀ #W * "
 set-window-option -g window-status-format "#[fg=colour255,bg=colour27] #I ⮁ #W"
 set-window-option -g window-status-last-style fg=colour255,bg=colour27
 
