--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,28 +1,51 @@
 # Prefix Key
 unbind-key C-b
-set -g prefix C-w
+set -g prefix C-w # In terminal, this is remapped to <C-,>
 
 # Set default shell
-set-option -g default-command $SHELL
+set -g default-command $SHELL
 
 # Automatically set window title
-set-window-option -g automatic-rename off
-set-option -g set-titles on
+setw -g automatic-rename off
+set -g set-titles on
 
-# Window styling
-set-window-option -g window-status-activity-style fg=colour255,bg=colour27
-set-window-option -g window-status-current-format "#[fg=colour27, bg=colour255, bold] #I ⮀ #W * "
-set-window-option -g window-status-format "#[fg=colour255,bg=colour27] #I ⮁ #W"
-set-window-option -g window-status-last-style fg=colour255,bg=colour27
+# Status Window format
+setw -g window-status-current-format #[fg=colour27, bg=colour255, bold] #I ⮀ #W *
+setw -g window-status-format #[fg=colour255,bg=colour27] #I ⮁ #W
+
+# Status Window styling
+set -g status on
+set -g status-interval 2
+set -g status-justify "centre"
+set -g status-left-length 60
+set -g status-right-length 90
+set -g status-style fg=colour255,bg=colour27
+set -g status-left-style fg=colour255,bg=colour27
+set -g status-right-style fg=colour255,bg=colour27
+set -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
+set -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
+
+setw -g window-status-style fg=colour255,bg=colour27
+setw -g window-status-current-style fg=colour255,bg=colour27
+setw -g window-status-activity-style fg=colour255,bg=colour27
+setw -g window-status-bell-style fg=colour255,bg=colour27
+setw -g window-status-last-style fg=colour255,bg=colour27
+
+set -g message-command-style fg=colour255,bg=colour27
+set -g message-style fg=colour255,bg=colour27
+set -g mode-style fg=colour255,bg=colour27
 
 set -g status-keys vi
 set -g history-limit 10000
 setw -g mode-keys vi
 setw -g monitor-activity on
-setw -g visual-activity on
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence on
+set -g bell-action none
 
 # Make scrolling with wheels work
-set-option -g mouse on
+set -g mouse on
 bind-key -T root WheelUpPane \
   if-shell -Ft= '#{?pane_in_mode,1,#{mouse_any_flag}}' \
     'send -Mt=' \
@@ -86,9 +109,6 @@ set -w -g wrap-search off
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
-# Restore tmux session
-set -g @continuum-restore 'on'
-
 # Default terminal
 set -g default-terminal 'screen-256color'
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
@@ -99,16 +119,12 @@ set -g focus-events on
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-
 set -g @plugin 'erikw/tmux-powerline'
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 90
-set-option -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
+
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on' # Restore tmux session
+set -g @continuum-save-interval '5' # save session every 5 minutes (default is 15)
+
 
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @sidebar-tree '.' # Toggle key binding
