--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ setw -g automatic-rename off
 set -g set-titles on
 
 # Status Window format
-setw -g window-status-current-format #[fg=colour27, bg=colour255, bold] #I ⮀ #W *
-setw -g window-status-format #[fg=colour255,bg=colour27] #I ⮁ #W
+setw -g window-status-current-format "#[fg=colour27,bg=colour255,bold] #I ⮀ #W* "
+setw -g window-status-format "#[fg=colour255,bg=colour27] #I #[fg=colour27,bg=colour81]⮀#[fg=colour81,bg=colour159]⮀#[fg=colour27,bg=colour159] #W "
 
 # Status Window styling
 set -g status on
@@ -26,6 +26,7 @@ set -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
 set -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
 
 setw -g window-status-style fg=colour255,bg=colour27
+setw -g window-status-separator ""
 setw -g window-status-current-style fg=colour255,bg=colour27
 setw -g window-status-activity-style fg=colour255,bg=colour27
 setw -g window-status-bell-style fg=colour255,bg=colour27
@@ -39,7 +40,7 @@ set -g status-keys vi
 set -g history-limit 10000
 setw -g mode-keys vi
 setw -g monitor-activity on
-set -g visual-activity off
+set -g visual-activity on
 set -g visual-bell off
 set -g visual-silence on
 set -g bell-action none
