--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,23 +19,24 @@ set -g status-interval 2
 set -g status-justify "centre"
 set -g status-left-length 60
 set -g status-right-length 90
-set -g status-style fg=colour255,bg=colour27
-set -g status-left-style fg=colour255,bg=colour27
-set -g status-right-style fg=colour255,bg=colour27
+set -g status-style "fg=colour255,bg=colour27"
+set -g status-left-style "fg=colour255,bg=colour27"
+set -g status-right-style "fg=colour255,bg=colour27"
 set -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
 set -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
 
-setw -g window-status-style fg=colour255,bg=colour27
+setw -g window-status-style "fg=colour255,bg=colour27"
 setw -g window-status-separator ""
-setw -g window-status-current-style fg=colour255,bg=colour27
-setw -g window-status-activity-style fg=colour255,bg=colour27
-setw -g window-status-bell-style fg=colour255,bg=colour27
-setw -g window-status-last-style fg=colour255,bg=colour27
+setw -g window-status-current-style "fg=colour255,bg=colour27"
+setw -g window-status-activity-style "fg=colour255,bg=colour27"
+setw -g window-status-bell-style "fg=colour255,bg=colour27"
+setw -g window-status-last-style "fg=colour255,bg=colour27"
 
-set -g message-command-style fg=colour255,bg=colour27
-set -g message-style fg=colour255,bg=colour27
-set -g mode-style fg=colour255,bg=colour27
+set -g message-command-style "fg=colour255,bg=colour27"
+set -g message-style "fg=colour255,bg=colour27"
+set -g mode-style "fg=colour255,bg=colour27"
 
+# General Settings
 set -g status-keys vi
 set -g history-limit 10000
 setw -g mode-keys vi
