--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,7 +109,7 @@ set -w -g wrap-search off
 
 # Restore neovim sessions
 set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-capture-pane-contents 'off'
 
 # Default terminal
 set -g default-terminal 'screen-256color'
