Changed continuum auto save to 1 minute interval

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -124,8 +124,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'erikw/tmux-powerline'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on' # Restore tmux session
-set -g @continuum-save-interval '5' # save session every 5 minutes (default is 15)
+set -g @continuum-restore 'on' # Restore session when starting tmux
+set -g @continuum-save-interval '1' # minutes (default is 15)
 
 
 set -g @plugin 'tmux-plugins/tmux-sidebar'
