Updated chevron for window styling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ setw -g automatic-rename off
 set -g set-titles on
 
 # Status Window format
-setw -g window-status-current-format "#[fg=colour27,bg=colour255,bold] #I ⮀ #W* "
-setw -g window-status-format "#[fg=colour255,bg=colour27] #I #[fg=colour27,bg=colour81]⮀#[fg=colour81,bg=colour159]⮀#[fg=colour27,bg=colour159] #W "
+setw -g window-status-current-format "#[fg=colour27,bg=colour255,bold] #I  #W* "
+setw -g window-status-format "#[fg=colour255,bg=colour27] #I #[fg=colour27,bg=colour81]#[fg=colour81,bg=colour159]#[fg=colour27,bg=colour159] #W "
 
 # Status Window styling
 set -g status on
