Removed powerline plugin and replaced with custom prompt

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,21 +9,26 @@ set -g default-command $SHELL
 setw -g automatic-rename off
 set -g set-titles on
 
+# Variables
+SEP_LEFT=""
+COL_PRI="#[fg=colour27,bg=colour255,bold]"
+COL_SEC="#[fg=colour255,bg=colour27]"
+
 # Status Window format
-setw -g window-status-current-format "#[fg=colour27,bg=colour255,bold] #I  #W* "
-setw -g window-status-format "#[fg=colour255,bg=colour27] #I #[fg=colour27,bg=colour81]#[fg=colour81,bg=colour159]#[fg=colour27,bg=colour159] #W "
+setw -g window-status-current-format "${COL_PRI} #I ${SEP_LEFT} #W* "
+setw -g window-status-format "${COL_SEC} #I #[fg=colour27,bg=colour81]${SEP_LEFT}#[fg=colour81,bg=colour159]${SEP_LEFT}#[fg=colour27,bg=colour159] #W "
 
 # Status Window styling
 set -g status on
-set -g status-interval 2
-set -g status-justify "centre"
+set -g status-interval 1
+set -g status-justify "left"
 set -g status-left-length 60
 set -g status-right-length 90
 set -g status-style "fg=colour255,bg=colour27"
 set -g status-left-style "fg=colour255,bg=colour27"
 set -g status-right-style "fg=colour255,bg=colour27"
-set -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
-set -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
+set -g status-left ""
+set -g status-right "${COL_PRI}${SEP_LEFT} %m/%d/%Y ${COL_SEC}${SEP_LEFT} %H:%M:%S %p "
 
 setw -g window-status-style "fg=colour255,bg=colour27"
 setw -g window-status-separator ""
@@ -121,7 +126,6 @@ set -g focus-events on
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'erikw/tmux-powerline'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on' # Restore session when starting tmux
