Turned off monitor activity messages

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,7 +45,7 @@ set -g mode-style "fg=colour255,bg=colour27"
 set -g status-keys vi
 set -g history-limit 10000
 setw -g mode-keys vi
-setw -g monitor-activity on
+setw -g monitor-activity off
 set -g visual-activity on
 set -g visual-bell off
 set -g visual-silence on
