Added prefix highlight plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set -g status-style "fg=colour255,bg=colour27"
 set -g status-left-style "fg=colour255,bg=colour27"
 set -g status-right-style "fg=colour255,bg=colour27"
 set -g status-left ""
-set -g status-right "${COL_PRI}${SEP_LEFT} %m/%d/%Y ${COL_SEC}${SEP_LEFT} %H:%M:%S %p "
+set -g status-right "#{prefix_highlight}${COL_PRI}${SEP_LEFT} %m/%d/%Y ${COL_SEC}${SEP_LEFT} %H:%M:%S %p "
 
 setw -g window-status-style "fg=colour255,bg=colour27"
 setw -g window-status-separator ""
@@ -127,10 +127,14 @@ set -g focus-events on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @prefix_highlight_fg '255'
+set -g @prefix_highlight_bg '27'
+set -g @prefix_highlight_prefix_prompt '--Prefix--'
+
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on' # Restore session when starting tmux
 set -g @continuum-save-interval '1' # minutes (default is 15)
-
 
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @sidebar-tree '.' # Toggle key binding
