Updated time format display

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set -g status-style "fg=colour255,bg=colour27"
 set -g status-left-style "fg=colour255,bg=colour27"
 set -g status-right-style "fg=colour255,bg=colour27"
 set -g status-left ""
-set -g status-right "#{prefix_highlight}${COL_PRI}${SEP_LEFT} %m/%d/%Y ${COL_SEC}${SEP_LEFT} %H:%M:%S %p "
+set -g status-right "#{prefix_highlight}${COL_PRI}${SEP_LEFT} %m/%d/%Y ${COL_SEC}${SEP_LEFT} %r "
 
 setw -g window-status-style "fg=colour255,bg=colour27"
 setw -g window-status-separator ""
