Updated window current format font color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,7 @@ COL_PRI="#[fg=colour27,bg=colour255,bold]"
 COL_SEC="#[fg=colour255,bg=colour27]"
 
 # Status Window format
-setw -g window-status-current-format "${COL_PRI} #I ${SEP_LEFT} #W* "
+setw -g window-status-current-format "#[fg=colour237,bg=colour255] #I ${SEP_LEFT} #W* "
 setw -g window-status-format "${COL_SEC} #I #[fg=colour27,bg=colour81]${SEP_LEFT}#[fg=colour81,bg=colour159]${SEP_LEFT}#[fg=colour27,bg=colour159] #W "
 
 # Status Window styling
