Created variables to store all theme related display

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,13 +10,35 @@ setw -g automatic-rename off
 set -g set-titles on
 
 # Variables
-SEP_LEFT=""
-COL_PRI="#[fg=colour27,bg=colour255,bold]"
-COL_SEC="#[fg=colour255,bg=colour27]"
+SEP_L=""
+SEP_R=""
+
+CL1_PRI="#[fg=colour27,bg=colour255,bold]"
+CL1_SEC="#[fg=colour255,bg=colour27]"
+
+CL1_TSA="#[fg=colour27,bg=colour81]"
+CL1_TSB="#[fg=colour81,bg=colour159]"
+CL1_TSC="#[fg=colour27,bg=colour159]"
+CL1_TSD="#[fg=colour81,bg=colour27]"
+CL1_TSE="#[fg=colour159,bg=colour81]"
+
+CL2_PRI="#[fg=colour237,bg=colour255]"
+CL2_SEC="#[fg=colour255,bg=colour237]"
+
+CL2_TSA="#[fg=colour237,bg=colour245]"
+CL2_TSB="#[fg=colour245,bg=colour255]"
+CL2_TSC="#[fg=colour237,bg=colour255]"
+CL2_TSD="#[fg=colour245,bg=colour159]"
+CL2_TSE="#[fg=colour237,bg=colour245]"
+
+CL1_TS1="${CL2_TSA}${SEP_L}${CL2_TSB}${SEP_L}${CL2_TSC}"
+CL1_TS2="${CL1_TSD}${SEP_R}${CL1_TSE}${SEP_R}${CL1_TSC}"
+CL2_TS1="${CL1_TSA}${SEP_L}${CL1_TSB}${SEP_L}${CL1_TSC}"
+CL2_TS2="${CL2_TSD}${SEP_R}${CL2_TSE}${SEP_R}${CL2_SEC}"
 
 # Status Window format
-setw -g window-status-current-format "#[fg=colour237,bg=colour255] #I ${SEP_LEFT} #W* "
-setw -g window-status-format "${COL_SEC} #I #[fg=colour27,bg=colour81]${SEP_LEFT}#[fg=colour81,bg=colour159]${SEP_LEFT}#[fg=colour27,bg=colour159] #W "
+setw -g window-status-current-format "${CL2_SEC} #I ${CL1_TS1} #W* "
+setw -g window-status-format "${CL1_SEC} #I ${CL2_TS1} #W "
 
 # Status Window styling
 set -g status on
@@ -24,22 +46,22 @@ set -g status-interval 1
 set -g status-justify "left"
 set -g status-left-length 60
 set -g status-right-length 90
-set -g status-style "fg=colour255,bg=colour27"
-set -g status-left-style "fg=colour255,bg=colour27"
-set -g status-right-style "fg=colour255,bg=colour27"
+set -g status-style "${CL1_SEC}"
+set -g status-left-style "${CL1_SEC}"
+set -g status-right-style "${CL1_SEC}"
 set -g status-left ""
-set -g status-right "#{prefix_highlight}${COL_PRI}${SEP_LEFT} %m/%d/%Y ${COL_SEC}${SEP_LEFT} %r "
+set -g status-right "#{prefix_highlight}${CL1_TS2} %m/%d/%Y ${CL2_TS2} %r "
 
-setw -g window-status-style "fg=colour255,bg=colour27"
+setw -g window-status-style "${CL1_SEC}"
 setw -g window-status-separator ""
-setw -g window-status-current-style "fg=colour255,bg=colour27"
-setw -g window-status-activity-style "fg=colour255,bg=colour27"
-setw -g window-status-bell-style "fg=colour255,bg=colour27"
-setw -g window-status-last-style "fg=colour255,bg=colour27"
+setw -g window-status-current-style "${CL1_SEC}"
+setw -g window-status-activity-style "${CL1_SEC}"
+setw -g window-status-bell-style "${CL1_SEC}"
+setw -g window-status-last-style "${CL1_SEC}"
 
-set -g message-command-style "fg=colour255,bg=colour27"
-set -g message-style "fg=colour255,bg=colour27"
-set -g mode-style "fg=colour255,bg=colour27"
+set -g message-command-style "${CL1_SEC}"
+set -g message-style "${CL1_SEC}"
+set -g mode-style "${CL1_SEC}"
 
 # General Settings
 set -g status-keys vi
