Added current path to right prompt

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,7 @@ set -g status-style "${CL1_SEC}"
 set -g status-left-style "${CL1_SEC}"
 set -g status-right-style "${CL1_SEC}"
 set -g status-left ""
-set -g status-right "#{prefix_highlight}${CL1_TS2} %m/%d/%Y ${CL2_TS2} %r "
+set -g status-right "#{prefix_highlight} #{pane_current_path} ${CL1_TS2} %m/%d/%Y ${CL2_TS2} %r "
 
 setw -g window-status-style "${CL1_SEC}"
 setw -g window-status-separator ""
