Updated styles to use no expanded variable

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ SEP_R=""
 
 CL1_PRI="#[fg=colour27,bg=colour255,bold]"
 CL1_SEC="#[fg=colour255,bg=colour27]"
+CL1_SEC_NO_EXP="fg=colour255,bg=colour27"
 
 CL1_TSA="#[fg=colour27,bg=colour81]"
 CL1_TSB="#[fg=colour81,bg=colour159]"
@@ -46,22 +47,22 @@ set -g status-interval 1
 set -g status-justify "left"
 set -g status-left-length 60
 set -g status-right-length 90
-set -g status-style "${CL1_SEC}"
-set -g status-left-style "${CL1_SEC}"
-set -g status-right-style "${CL1_SEC}"
+set -g status-style "${CL1_SEC_NO_EXP}"
+set -g status-left-style "${CL1_SEC_NO_EXP}"
+set -g status-right-style "${CL1_SEC_NO_EXP}"
 set -g status-left ""
 set -g status-right "#{prefix_highlight} ${CL1_TS2} #{pane_current_path} ${CL2_TS2} %m/%d/%Y %r "
 
-setw -g window-status-style "${CL1_SEC}"
+setw -g window-status-style "${CL1_SEC_NO_EXP}"
 setw -g window-status-separator ""
-setw -g window-status-current-style "${CL1_SEC}"
-setw -g window-status-activity-style "${CL1_SEC}"
-setw -g window-status-bell-style "${CL1_SEC}"
-setw -g window-status-last-style "${CL1_SEC}"
+setw -g window-status-current-style "${CL1_SEC_NO_EXP}"
+setw -g window-status-activity-style "${CL1_SEC_NO_EXP}"
+setw -g window-status-bell-style "${CL1_SEC_NO_EXP}"
+setw -g window-status-last-style "${CL1_SEC_NO_EXP}"
 
-set -g message-command-style "${CL1_SEC}"
-set -g message-style "${CL1_SEC}"
-set -g mode-style "${CL1_SEC}"
+set -g message-command-style "${CL1_SEC_NO_EXP}"
+set -g message-style "${CL1_SEC_NO_EXP}"
+set -g mode-style "${CL1_SEC_NO_EXP}"
 
 # General Settings
 set -g status-keys vi
