--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,6 +60,14 @@ setw -g window-status-activity-style "${CL1_SEC_NO_EXP}"
 setw -g window-status-bell-style "${CL1_SEC_NO_EXP}"
 setw -g window-status-last-style "${CL1_SEC_NO_EXP}"
 
+# Window Styling
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=colour0'
+
+# Pane Styling
+set -g pane-border-style bg=colour235,fg=colour238
+set -g pane-active-border-style bg=colour236,fg=colour51
+
 set -g message-command-style "${CL1_SEC_NO_EXP}"
 set -g message-style "${CL1_SEC_NO_EXP}"
 set -g mode-style "${CL1_SEC_NO_EXP}"
@@ -124,10 +132,6 @@ bind -n M-j if-shell "$is_vim" "send-keys M-j" "resize-pane -D 5"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-
-# Highlight active/inactive
-set -g pane-border-style bg=colour235,fg=colour238
-set -g pane-active-border-style bg=colour236,fg=colour51
 
 # Automatically renumber window numbers on closing a pane
 set -g renumber-windows on
