--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
 [merge]
     conflictstyle = diff3
 [color]
-    ui = always
+	ui = auto
 [color "diff-highlight"]
     oldNormal = red bold
     oldHighlight = red bold 52
