--- a/.tmux.conf
+++ b/.tmux.conf
@@ -153,6 +153,7 @@ set -g focus-events on
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_fg '255'
