Turned off suggestions for javascript files from typescript server

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -2,5 +2,6 @@
     "eslint.filetypes": [
         "javascript",
         "javascriptreact"
-    ]
+    ],
+    "javascript.suggestionActions.enabled": false
 }
