Orgainzed some of the settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,8 @@ set -g default-command $SHELL
 setw -g automatic-rename off
 set -g set-titles on
 
-# Variables
+# Variables {{{
+
 SEP_L=""
 SEP_R=""
 
@@ -37,11 +38,14 @@ CL1_TS2="${CL1_TSD}${SEP_R}${CL1_TSE}${SEP_R}${CL1_TSC}"
 CL2_TS1="${CL1_TSA}${SEP_L}${CL1_TSB}${SEP_L}${CL1_TSC}"
 CL2_TS2="${CL2_TSD}${SEP_R}${CL2_TSE}${SEP_R}${CL2_SEC}"
 
+# }}}
+
 # Status Window format
 setw -g window-status-current-format "${CL2_SEC} #I ${CL1_TS1} #W* "
 setw -g window-status-format "${CL1_SEC} #I ${CL2_TS1} #W "
 
-# Status Window styling
+# Status Window styling {{{
+
 set -g status on
 set -g status-interval 1
 set -g status-justify "left"
@@ -60,6 +64,8 @@ setw -g window-status-activity-style "${CL1_SEC_NO_EXP}"
 setw -g window-status-bell-style "${CL1_SEC_NO_EXP}"
 setw -g window-status-last-style "${CL1_SEC_NO_EXP}"
 
+# }}}
+
 # Window Styling
 set -g window-style 'fg=colour247,bg=colour236'
 set -g window-active-style 'fg=colour250,bg=colour0'
@@ -73,9 +79,7 @@ set -g message-style "${CL1_SEC_NO_EXP}"
 set -g mode-style "${CL1_SEC_NO_EXP}"
 
 # General Settings
-set -g status-keys vi
 set -g history-limit 10000
-setw -g mode-keys vi
 setw -g monitor-activity off
 set -g visual-activity on
 set -g visual-bell off
@@ -106,6 +110,11 @@ bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 # Close tmux
 bind-key k kill-session
 
+# Vi mode {{{
+
+setw -g mode-keys vi
+set -g status-keys vi
+
 # Smart pane switching/resizing with awareness of Vim splits.
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
@@ -132,6 +141,8 @@ bind -n M-j if-shell "$is_vim" "send-keys M-j" "resize-pane -D 5"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# }}}
 
 # Automatically renumber window numbers on closing a pane
 set -g renumber-windows on
