updates kill key bind and add swap window key binds

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -108,7 +108,11 @@ bind-key s split-window -v -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # Close tmux
-bind-key k kill-session
+bind-key C-k kill-session
+
+# Swap Windows
+bind-key C-h swap-window -t -1
+bind-key C-l swap-window -t +1
 
 # Vi mode {{{
 
