adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -8,21 +8,37 @@
       "acctapi",
       "agendash",
       "ardproc",
+      "autocapitalize",
+      "autocorrect",
+      "autotest",
+      "BADDATA",
       "commerceapi",
       "danlaw",
       "danlawapi",
+      "DATETIME",
       "devops",
+      "dissoc",
       "distproc",
+      "enchelper",
+      "erating",
       "healthcheck",
+      "imtoken",
       "liveweb",
       "localdev",
+      "mailchimp",
       "makerapi",
       "middlewares",
+      "Nexa",
       "offsiteapi",
       "showcaseapi",
+      "TIMEFRAME",
       "trekweb",
+      "UNPROCESSABLEENTITY",
+      "upscope",
+      "userauthentications",
       "vindy",
       "vindyapi",
+      "watchurl",
       "zulgwapi"
     ]
 }
