adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -7,11 +7,16 @@
     "cSpell.userWords": [
       "acctapi",
       "agendash",
+      "AKIAJXXQSUUZBEAF",
+      "apos",
       "ardproc",
       "autocapitalize",
       "autocorrect",
       "autotest",
       "BADDATA",
+      "bapi",
+      "bouncie",
+      "camelcase",
       "commerceapi",
       "danlaw",
       "danlawapi",
@@ -21,7 +26,12 @@
       "distproc",
       "enchelper",
       "erating",
+      "fenceid",
+      "geoapi",
+      "hdop",
       "healthcheck",
+      "IFTTT",
+      "imei",
       "imtoken",
       "liveweb",
       "localdev",
@@ -30,9 +40,12 @@
       "middlewares",
       "Nexa",
       "offsiteapi",
+      "rssi",
       "showcaseapi",
+      "telematic",
       "TIMEFRAME",
       "trekweb",
+      "triplegs",
       "UNPROCESSABLEENTITY",
       "upscope",
       "userauthentications",
