adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -15,8 +15,11 @@
       "autotest",
       "BADDATA",
       "bapi",
+      "basepay",
+      "Bliley",
       "bouncie",
       "camelcase",
+      "COBUYER",
       "commerceapi",
       "danlaw",
       "danlawapi",
@@ -28,6 +31,7 @@
       "erating",
       "fenceid",
       "geoapi",
+      "Gramm",
       "hdop",
       "healthcheck",
       "IFTTT",
@@ -42,6 +46,7 @@
       "offsiteapi",
       "rssi",
       "showcaseapi",
+      "sweetalert",
       "telematic",
       "TIMEFRAME",
       "trekweb",
