adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -19,7 +19,9 @@
       "Bliley",
       "bouncie",
       "camelcase",
+      "christoomey",
       "COBUYER",
+      "cohama",
       "commerceapi",
       "danlaw",
       "danlawapi",
@@ -37,18 +39,27 @@
       "IFTTT",
       "imei",
       "imtoken",
+      "junegunn",
+      "justinmk",
+      "lexima",
       "liveweb",
       "localdev",
+      "luochen",
       "mailchimp",
       "makerapi",
+      "mattn",
       "middlewares",
+      "neoclide",
       "Nexa",
       "offsiteapi",
       "rssi",
+      "sheerun",
       "showcaseapi",
       "sweetalert",
+      "tcomment",
       "telematic",
       "TIMEFRAME",
+      "tpope",
       "trekweb",
       "triplegs",
       "UNPROCESSABLEENTITY",
@@ -57,6 +68,8 @@
       "vindy",
       "vindyapi",
       "watchurl",
+      "Xuyuanp",
+      "yggdroot",
       "zulgwapi"
     ]
 }
