adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -26,12 +26,15 @@
       "danlaw",
       "danlawapi",
       "DATETIME",
+      "Dawningofa",
+      "Delafield",
       "devops",
       "dissoc",
       "distproc",
       "enchelper",
       "erating",
       "fenceid",
+      "fonturl",
       "geoapi",
       "Gramm",
       "hdop",
@@ -47,11 +50,13 @@
       "luochen",
       "mailchimp",
       "makerapi",
+      "makerjs",
       "mattn",
       "middlewares",
       "neoclide",
       "Nexa",
       "offsiteapi",
+      "opentype",
       "rssi",
       "sheerun",
       "showcaseapi",
@@ -70,6 +75,7 @@
       "watchurl",
       "Xuyuanp",
       "yggdroot",
+      "Zeyada",
       "zulgwapi"
     ]
 }
