auto imports have spaces around the symbol

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -4,6 +4,7 @@
         "javascriptreact"
     ],
     "javascript.suggestionActions.enabled": false,
+    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
     "cSpell.userWords": [
       "acctapi",
       "agendash",
