adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -9,6 +9,7 @@
       "acctapi",
       "agendash",
       "AKIAJXXQSUUZBEAF",
+      "ALLGOOD",
       "apos",
       "ardproc",
       "autocapitalize",
