adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -7,20 +7,27 @@
     "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
     "cSpell.userWords": [
       "acctapi",
+      "adminapi",
       "agendash",
       "AKIAJXXQSUUZBEAF",
       "ALLGOOD",
       "apos",
+      "apptapi",
       "ardproc",
       "autocapitalize",
       "autocorrect",
+      "autodocker",
       "autotest",
       "BADDATA",
       "bapi",
       "basepay",
       "Bliley",
+      "bouapi",
       "bouncie",
       "camelcase",
+      "campapi",
+      "careapi",
+      "careproc",
       "christoomey",
       "COBUYER",
       "cohama",
@@ -33,19 +40,25 @@
       "devops",
       "dissoc",
       "distproc",
+      "driveapi",
       "enchelper",
       "erating",
       "fenceid",
       "fonturl",
       "geoapi",
+      "geoproc",
       "Gramm",
       "hdop",
       "healthcheck",
+      "hopapi",
+      "iamapi",
       "IFTTT",
       "imei",
       "imtoken",
+      "journeyapi",
       "junegunn",
       "justinmk",
+      "landingweb",
       "lexima",
       "liveweb",
       "localdev",
@@ -54,24 +67,35 @@
       "makerapi",
       "makerjs",
       "mattn",
+      "messageapi",
       "middlewares",
+      "mktapi",
+      "msgproc",
       "neoclide",
       "Nexa",
       "offsiteapi",
       "opentype",
+      "ordersapi",
+      "profileapi",
       "rssi",
+      "sallyapi",
       "sheerun",
       "showcaseapi",
+      "staticassets",
       "sweetalert",
       "tcomment",
       "telematic",
+      "telproc",
       "TIMEFRAME",
       "tpope",
+      "trekapi",
       "trekweb",
       "triplegs",
       "UNPROCESSABLEENTITY",
       "upscope",
+      "userapi",
       "userauthentications",
+      "vehicleapi",
       "vindy",
       "vindyapi",
       "watchurl",
