adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -18,17 +18,21 @@
       "autocorrect",
       "autodocker",
       "autotest",
+      "AVSU",
       "BADDATA",
       "bapi",
       "basepay",
       "Bliley",
       "bouapi",
       "bouncie",
+      "bounciedev",
+      "branchio",
       "camelcase",
       "campapi",
       "careapi",
       "careproc",
       "christoomey",
+      "Ckhp",
       "COBUYER",
       "cohama",
       "commerceapi",
@@ -40,11 +44,14 @@
       "devops",
       "dissoc",
       "distproc",
+      "dkahjpq",
       "driveapi",
+      "edmunds",
       "enchelper",
       "erating",
       "fenceid",
       "fonturl",
+      "forumbee",
       "geoapi",
       "geoproc",
       "Gramm",
@@ -55,10 +62,12 @@
       "IFTTT",
       "imei",
       "imtoken",
+      "Jmob",
       "journeyapi",
       "junegunn",
       "justinmk",
       "landingweb",
+      "Lbbaqqbb",
       "lexima",
       "liveweb",
       "localdev",
@@ -73,12 +82,15 @@
       "msgproc",
       "neoclide",
       "Nexa",
+      "nkypjj",
       "offsiteapi",
       "opentype",
       "ordersapi",
       "profileapi",
       "rssi",
       "sallyapi",
+      "satd",
+      "SDQVQ",
       "sheerun",
       "showcaseapi",
       "staticassets",
@@ -99,6 +111,7 @@
       "vindy",
       "vindyapi",
       "watchurl",
+      "xockp",
       "Xuyuanp",
       "yggdroot",
       "Zeyada",
