--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -11,6 +11,7 @@
       "agendash",
       "AKIAJXXQSUUZBEAF",
       "ALLGOOD",
+      "apidoc",
       "apos",
       "apptapi",
       "ardproc",
@@ -36,6 +37,7 @@
       "COBUYER",
       "cohama",
       "commerceapi",
+      "controlfreak",
       "danlaw",
       "danlawapi",
       "DATETIME",
@@ -45,6 +47,7 @@
       "dissoc",
       "distproc",
       "dkahjpq",
+      "dnscache",
       "driveapi",
       "edmunds",
       "enchelper",
@@ -67,6 +70,7 @@
       "junegunn",
       "justinmk",
       "landingweb",
+      "launchdarkly",
       "Lbbaqqbb",
       "lexima",
       "liveweb",
@@ -75,6 +79,7 @@
       "mailchimp",
       "makerapi",
       "makerjs",
+      "mapbox",
       "mattn",
       "messageapi",
       "middlewares",
@@ -86,7 +91,11 @@
       "offsiteapi",
       "opentype",
       "ordersapi",
+      "polyline",
+      "precommit",
       "profileapi",
+      "rabbitmq",
+      "randomstring",
       "rssi",
       "sallyapi",
       "satd",
@@ -105,6 +114,7 @@
       "triplegs",
       "UNPROCESSABLEENTITY",
       "upscope",
+      "urijs",
       "userapi",
       "userauthentications",
       "vehicleapi",
