adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -6,13 +6,19 @@
     "javascript.suggestionActions.enabled": false,
     "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
     "cSpell.userWords": [
+      "accountcode",
       "acctapi",
+      "activitycode",
       "adminapi",
       "agendash",
       "AKIAJXXQSUUZBEAF",
       "ALLGOOD",
+      "altfinance",
       "apidoc",
       "apos",
+      "appid",
+      "applicationsettings",
+      "appname",
       "apptapi",
       "ardproc",
       "autocapitalize",
@@ -32,16 +38,25 @@
       "campapi",
       "careapi",
       "careproc",
+      "certinfo",
+      "changestatus",
       "christoomey",
       "Ckhp",
       "COBUYER",
       "cohama",
       "commerceapi",
+      "contractid",
+      "contractids",
+      "contractpreflight",
+      "contractstatuses",
       "controlfreak",
       "danlaw",
       "danlawapi",
+      "dateofsale",
       "DATETIME",
       "Dawningofa",
+      "dealeraccount",
+      "dealersettings",
       "Delafield",
       "devops",
       "dissoc",
@@ -49,14 +64,19 @@
       "dkahjpq",
       "dnscache",
       "driveapi",
+      "econtract",
       "edmunds",
       "enchelper",
+      "erate",
+      "Erated",
       "erating",
+      "Esigned",
       "fenceid",
       "fonturl",
       "forumbee",
       "geoapi",
       "geoproc",
+      "getprovider",
       "Gramm",
       "hdop",
       "healthcheck",
@@ -65,6 +85,8 @@
       "IFTTT",
       "imei",
       "imtoken",
+      "inservicerequired",
+      "ISCOMPLETE",
       "Jmob",
       "journeyapi",
       "junegunn",
@@ -77,34 +99,65 @@
       "localdev",
       "luochen",
       "mailchimp",
+      "makemodelinfo",
       "makerapi",
       "makerjs",
       "mapbox",
       "mattn",
+      "menutransid",
       "messageapi",
       "middlewares",
       "mktapi",
+      "modelmode",
       "msgproc",
       "neoclide",
+      "newpassword",
       "Nexa",
       "nextjs",
       "nkypjj",
       "offsiteapi",
       "opentype",
       "ordersapi",
+      "partnereligibleproducts",
+      "partnerproductrates",
+      "passwordchange",
+      "passwordok",
+      "pdfs",
       "polyline",
       "precommit",
+      "productcode",
+      "productcontracts",
+      "producteligible",
+      "productquote",
       "profileapi",
+      "profitsetting",
+      "profitsettings",
+      "providercode",
+      "providerid",
+      "providername",
+      "quoteid",
+      "quoteids",
+      "quotesasrates",
       "rabbitmq",
       "randomstring",
+      "ratepersist",
+      "ratesasquotes",
+      "rssapplications",
       "rssi",
+      "saletypes",
       "sallyapi",
       "satd",
       "SDQVQ",
       "sheerun",
       "showcaseapi",
+      "spandealerid",
+      "spanprovider",
+      "spanproviders",
+      "ssotoken",
       "staticassets",
+      "statusname",
       "sweetalert",
+      "TAILLIGHTSHOWCASE",
       "tcomment",
       "telematic",
       "telproc",
@@ -116,9 +169,14 @@
       "UNPROCESSABLEENTITY",
       "upscope",
       "urijs",
+      "usageinfo",
+      "useraccounts",
       "userapi",
+      "userapplicationactivity",
       "userauthentications",
+      "userid",
       "vehicleapi",
+      "vehicletype",
       "vindy",
       "vindyapi",
       "watchurl",
