adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -29,6 +29,7 @@
       "BADDATA",
       "bapi",
       "basepay",
+      "Bitstream",
       "Bliley",
       "bouapi",
       "bouncie",
@@ -36,6 +37,7 @@
       "branchio",
       "camelcase",
       "campapi",
+      "Cantarell",
       "careapi",
       "careproc",
       "certinfo",
@@ -72,6 +74,7 @@
       "erating",
       "Esigned",
       "fenceid",
+      "Fira",
       "fonturl",
       "forumbee",
       "geoapi",
@@ -80,6 +83,7 @@
       "Gramm",
       "hdop",
       "healthcheck",
+      "Helvetica",
       "hopapi",
       "iamapi",
       "IFTTT",
@@ -97,6 +101,7 @@
       "lexima",
       "liveweb",
       "localdev",
+      "Lucida",
       "luochen",
       "mailchimp",
       "makemodelinfo",
@@ -104,17 +109,22 @@
       "makerjs",
       "mapbox",
       "mattn",
+      "Menlo",
       "menutransid",
       "messageapi",
       "middlewares",
       "mktapi",
       "modelmode",
+      "monospace",
       "msgproc",
       "neoclide",
+      "Neue",
       "newpassword",
       "Nexa",
       "nextjs",
       "nkypjj",
+      "noopener",
+      "noreferrer",
       "offsiteapi",
       "opentype",
       "ordersapi",
@@ -140,14 +150,17 @@
       "quotesasrates",
       "rabbitmq",
       "randomstring",
+      "rarr",
       "ratepersist",
       "ratesasquotes",
+      "Roboto",
       "rssapplications",
       "rssi",
       "saletypes",
       "sallyapi",
       "satd",
       "SDQVQ",
+      "Segoe",
       "sheerun",
       "showcaseapi",
       "spandealerid",
@@ -177,6 +190,7 @@
       "userid",
       "vehicleapi",
       "vehicletype",
+      "Vercel",
       "vindy",
       "vindyapi",
       "watchurl",
