adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -11,6 +11,7 @@
       "activitycode",
       "adminapi",
       "agendash",
+      "AKIAIXOT",
       "AKIAJXXQSUUZBEAF",
       "ALLGOOD",
       "altfinance",
@@ -21,6 +22,7 @@
       "appname",
       "apptapi",
       "ardproc",
+      "asmx",
       "autocapitalize",
       "autocorrect",
       "autodocker",
@@ -58,9 +60,11 @@
       "DATETIME",
       "Dawningofa",
       "dealeraccount",
+      "DEALERNAME",
       "dealersettings",
       "Delafield",
       "devops",
+      "devtools",
       "dissoc",
       "distproc",
       "dkahjpq",
@@ -68,12 +72,14 @@
       "driveapi",
       "econtract",
       "edmunds",
+      "EMOV",
       "enchelper",
       "erate",
       "Erated",
       "erating",
       "Esigned",
       "fenceid",
+      "fiadmin",
       "Fira",
       "fonturl",
       "forumbee",
@@ -81,14 +87,19 @@
       "geoproc",
       "getprovider",
       "Gramm",
+      "GWSZ",
       "hdop",
       "healthcheck",
       "Helvetica",
       "hopapi",
+      "htmlencode",
+      "htmlescape",
       "iamapi",
       "IFTTT",
+      "illightd",
       "imei",
       "imtoken",
+      "inlinesvg",
       "inservicerequired",
       "ISCOMPLETE",
       "Jmob",
@@ -103,6 +114,7 @@
       "localdev",
       "Lucida",
       "luochen",
+      "luxon",
       "mailchimp",
       "makemodelinfo",
       "makerapi",
@@ -153,6 +165,7 @@
       "rarr",
       "ratepersist",
       "ratesasquotes",
+      "RISTKEN",
       "Roboto",
       "rssapplications",
       "rssi",
@@ -169,16 +182,19 @@
       "ssotoken",
       "staticassets",
       "statusname",
+      "stylis",
       "sweetalert",
       "TAILLIGHTSHOWCASE",
       "tcomment",
       "telematic",
       "telproc",
       "TIMEFRAME",
+      "TPACODE",
       "tpope",
       "trekapi",
       "trekweb",
       "triplegs",
+      "unfetch",
       "UNPROCESSABLEENTITY",
       "upscope",
       "urijs",
@@ -194,6 +210,7 @@
       "vindy",
       "vindyapi",
       "watchurl",
+      "webservice",
       "xockp",
       "Xuyuanp",
       "yggdroot",
