adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -87,6 +87,7 @@
       "geoproc",
       "getprovider",
       "Gramm",
+      "Gtag",
       "GWSZ",
       "hdop",
       "healthcheck",
@@ -126,6 +127,7 @@
       "messageapi",
       "middlewares",
       "mktapi",
+      "Mngr",
       "modelmode",
       "monospace",
       "msgproc",
@@ -137,6 +139,7 @@
       "nkypjj",
       "noopener",
       "noreferrer",
+      "OFAC",
       "offsiteapi",
       "opentype",
       "ordersapi",
@@ -204,12 +207,14 @@
       "userapplicationactivity",
       "userauthentications",
       "userid",
+      "uuidv",
       "vehicleapi",
       "vehicletype",
       "Vercel",
       "vindy",
       "vindyapi",
       "watchurl",
+      "Wdth",
       "webservice",
       "xockp",
       "Xuyuanp",
