adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -33,6 +33,7 @@
       "basepay",
       "Bitstream",
       "Bliley",
+      "blinkon",
       "bouapi",
       "bouncie",
       "bounciedev",
@@ -54,6 +55,7 @@
       "contractpreflight",
       "contractstatuses",
       "controlfreak",
+      "ctermfgs",
       "danlaw",
       "danlawapi",
       "dateofsale",
@@ -83,11 +85,13 @@
       "Fira",
       "fonturl",
       "forumbee",
+      "funcobj",
       "geoapi",
       "geoproc",
       "getprovider",
       "Gramm",
       "Gtag",
+      "guifgs",
       "GWSZ",
       "hdop",
       "healthcheck",
@@ -131,6 +135,7 @@
       "modelmode",
       "monospace",
       "msgproc",
+      "mygroup",
       "neoclide",
       "Neue",
       "newpassword",
@@ -168,6 +173,7 @@
       "rarr",
       "ratepersist",
       "ratesasquotes",
+      "recalc",
       "RISTKEN",
       "Roboto",
       "rssapplications",
@@ -186,6 +192,7 @@
       "staticassets",
       "statusname",
       "stylis",
+      "swal",
       "sweetalert",
       "TAILLIGHTSHOWCASE",
       "tcomment",
