adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -101,6 +101,7 @@
       "htmlencode",
       "htmlescape",
       "iamapi",
+      "idanarye",
       "IFTTT",
       "illightd",
       "imei",
@@ -129,6 +130,7 @@
       "mattn",
       "Menlo",
       "menutransid",
+      "merginal",
       "messageapi",
       "middlewares",
       "mktapi",
