adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -139,6 +139,7 @@
       "monospace",
       "msgproc",
       "mygroup",
+      "nelstrom",
       "neoclide",
       "Neue",
       "newpassword",
