adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -11,6 +11,7 @@
       "activitycode",
       "adminapi",
       "agendash",
+      "airdock",
       "AKIAIXOT",
       "AKIAJXXQSUUZBEAF",
       "ALLGOOD",
@@ -37,6 +38,7 @@
       "bouapi",
       "bouncie",
       "bounciedev",
+      "bousallyapi",
       "branchio",
       "camelcase",
       "campapi",
@@ -80,6 +82,7 @@
       "Erated",
       "erating",
       "Esigned",
+      "fauria",
       "fcpg",
       "fenceid",
       "fiadmin",
@@ -100,6 +103,7 @@
       "hopapi",
       "htmlencode",
       "htmlescape",
+      "iamadminapi",
       "iamapi",
       "idanarye",
       "IFTTT",
@@ -108,6 +112,7 @@
       "imtoken",
       "inlinesvg",
       "inservicerequired",
+      "ipam",
       "ISCOMPLETE",
       "Jmob",
       "journeyapi",
@@ -136,6 +141,7 @@
       "mktapi",
       "Mngr",
       "modelmode",
+      "mongodb",
       "monospace",
       "msgproc",
       "mygroup",
@@ -146,6 +152,7 @@
       "Nexa",
       "nextjs",
       "nkypjj",
+      "nodemon",
       "noopener",
       "noreferrer",
       "OFAC",
@@ -179,16 +186,21 @@
       "ratesasquotes",
       "recalc",
       "RISTKEN",
+      "ristkensoft",
       "Roboto",
       "rssapplications",
       "rssi",
+      "rver",
       "saletypes",
       "sallyapi",
       "satd",
       "SDQVQ",
+      "seayou",
       "Segoe",
+      "settingsdwa",
       "sheerun",
       "showcaseapi",
+      "showcasepi",
       "spandealerid",
       "spanprovider",
       "spanproviders",
@@ -203,8 +215,35 @@
       "telematic",
       "telproc",
       "TIMEFRAME",
+      "tloacctapi",
+      "tloadminapi",
+      "tloapi",
+      "tloapptapi",
+      "tloardproc",
+      "tlobouapi",
+      "tlocampapi",
+      "tlocareapi",
+      "tlocareproc",
+      "tlodanlawapi",
+      "tlodistproc",
+      "tlodriveapi",
+      "tlogeoapi",
+      "tlogeoproc",
+      "tlohopapi",
+      "tlojourneyapi",
+      "tlomakerapi",
+      "tlomessageapi",
+      "tlomktapi",
+      "tloordersapi",
+      "tloprofileapi",
+      "tlotrekapi",
+      "tlouserapi",
+      "tlovehicleapi",
+      "tlpvindyapi",
       "TPACODE",
       "tpope",
+      "Traefik",
+      "traefikproxy",
       "trekapi",
       "trekweb",
       "triplegs",
@@ -224,6 +263,8 @@
       "Vercel",
       "vindy",
       "vindyapi",
+      "vsftp",
+      "vsftpd",
       "watchurl",
       "Wdth",
       "webservice",
