adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -39,6 +39,7 @@
       "bouncie",
       "bounciedev",
       "bousallyapi",
+      "BPAA",
       "branchio",
       "camelcase",
       "campapi",
@@ -74,13 +75,16 @@
       "dkahjpq",
       "dnscache",
       "driveapi",
+      "EASYCARE",
       "econtract",
       "edmunds",
       "EMOV",
+      "emtz",
       "enchelper",
       "erate",
       "Erated",
       "erating",
+      "ESIG",
       "Esigned",
       "fauria",
       "fcpg",
@@ -118,6 +122,7 @@
       "journeyapi",
       "junegunn",
       "justinmk",
+      "Kvppf",
       "landingweb",
       "launchdarkly",
       "Lbbaqqbb",
